<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">geidea Task</string>
    <string name="icon">Icon</string>
    <string name="users">Users</string>
    <string name="user_details">User details</string>
    <string name="language">Language</string>
    <string name="choose_your_desired_language">Choose your desired language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="save">Save</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="no_users_msg">There is no users</string>
</resources>