<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <RelativeLayout
        android:id="@+id/language_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_toStartOf="@id/iv_close"
            android:gravity="start"
            android:text="@string/language"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_choose_your_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_language"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_toStartOf="@id/iv_close"
            android:gravity="start"
            android:text="@string/choose_your_desired_language"
            android:textAlignment="viewStart"
            android:textColor="@color/gray"
            android:textSize="@dimen/textSize12" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/icon"
            android:scaleType="fitXY"
            android:src="@drawable/ic_close" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/englishContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:paddingTop="@dimen/_4sdp"
        android:paddingBottom="@dimen/_4sdp">

        <TextView
            android:id="@+id/txt_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_toStartOf="@+id/iv_english_check"
            android:gravity="start"
            android:text="@string/english"
            android:textAlignment="viewStart"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/textSize14" />

        <ImageView
            android:id="@+id/iv_english_check"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/icon"
            android:scaleType="fitXY"
            android:src="@drawable/ic_radio_unchecked" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/arabicContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:paddingTop="@dimen/_4sdp"
        android:paddingBottom="@dimen/_4sdp">

        <TextView
            android:id="@+id/txt_arabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_toStartOf="@+id/iv_arabic_check"
            android:gravity="start"
            android:text="@string/arabic"
            android:textAlignment="viewStart"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/textSize14" />

        <ImageView
            android:id="@+id/iv_arabic_check"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/icon"
            android:scaleType="fitXY"
            android:src="@drawable/ic_radio_checked" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_48sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/bg_button"
        android:padding="@dimen/_8sdp">

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize14" />

    </RelativeLayout>

</LinearLayout>